tests/paczka1/small_fuzzy/87756934.err
Error in line 1: cI521N S902 77,9
Error in line 2: cI521N A761 71,9
